--- a/src/css/Searchbar.css
+++ b/src/css/Searchbar.css
@@ -1,4 +1,3 @@
-
 #search-container {
     padding-left: 0 !important;
 }
@@ -11,7 +10,7 @@
     border-radius: 15px;
     font-size: 0.9rem;
     width: 52%;
-    position:absolute;
+    position: absolute;
     z-index: 5;
     opacity: 0;
     transition: opacity 0.3s;
@@ -21,14 +20,13 @@
     opacity: 1;
 }
 
-
-
-
 #filter {
     border: 2px solid black;
     margin: 10px;
     padding: 10px;
     margin-left: 0;
+    border-radius: 16px;
+
 }
 
 #search {
@@ -37,4 +35,3 @@
     padding: 10px;
     margin-left: 0;
 }
-
