--- a/src/css/Searchbar.css
+++ b/src/css/Searchbar.css
@@ -6,18 +6,19 @@
     padding: 15px;
     border: 2px solid black;
     background-color: white;
-    width: 100%;
     border-radius: 15px;
     font-size: 0.9rem;
-    width: 52%;
     position: absolute;
     z-index: 5;
     opacity: 0;
-    transition: opacity 0.3s;
+    max-height: 0;
+    max-width: 0;
 }
 
 #filter-box.visible {
     opacity: 1;
+    max-height: 100%;
+    max-width: 52%;
 }
 
 #filter {
