--- a/src/css/Searchbar.css
+++ b/src/css/Searchbar.css
@@ -1,38 +1,3 @@
-#search-container {
-    padding-left: 0 !important;
-}
-
-#filter-box {
-    padding: 15px;
-    border: 2px solid black;
-    background-color: white;
-    border-radius: 15px;
-    font-size: 0.9rem;
-    position: absolute;
-    z-index: 5;
-    opacity: 0;
-    max-height: 0;
-    max-width: 0;
-}
-
-#filter-box.visible {
-    opacity: 1;
-    max-height: 100%;
-    max-width: 52%;
-}
-
-#filter {
-    border: 2px solid black;
-    margin: 10px;
-    padding: 10px;
-    margin-left: 0;
-    border-radius: 16px;
-
-}
-
-#search {
-    border: 2px solid black;
-    margin: 10px;
-    padding: 10px;
-    margin-left: 0;
+#filterContainer {
+    background: rgba(255, 255, 255, 0.8);
 }
