--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,41 @@
     height: 100vh
 }
 .navbar-color {
-    background-color: #8BC34A !important;
+    background-color: #8BC34A  !important;
 }
 
 .main-color {
+    background-color: #F2F2F2 !important;
+}
+
+
+.bg-primary, .btn-primary, .border-primary, .primary, .outline-primary  {
     background-color: #FF5722 !important;
+    border-color: #FF5722 !important;
+}
+
+#image {
+    margin-left:-40px;
+    float: left !important;
+    margin-top: 10px;
+}
+
+@media only screen and (max-width :767.9px) {
+    #image {
+        margin-left: 20px;
+    }
+
+    .mobile {
+        margin-left: 35px;
+    }
+}
+
+@media only screen and (min-width :768px) {
+    #image {
+        margin-left:-40px;
+        float: left !important;
+        margin-top: 10px;
+    }
 }
 
 
